--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.8",
     "typescript": "^3.0.3"
   }
 }
